--- a/favorites.html
+++ b/favorites.html
@@ -38,6 +38,48 @@
 
     </header>
 
+    <main>
+        <h2 class="titulo">Peliculas Favoritas</h2>
+        <section class="cajaPadre">
+     
+            <article class="cajaHija">
+                <img class="imagen" src="./img/1b.jpg" alt="">
+                <h2 class="texto1">Evil Dead</h2>
+            </article>
+
+            <article class="cajaHija">
+                <img class="imagen" src="./img/2b.jpg" alt="">
+                <h2 class="texto1">La noche del demonio 5</h2>
+            </article>
+
+            <article class="cajaHija">
+                <img class="imagen" src="./img/3b.jpg" alt="">
+                <h2 class="texto1">Megan</h2>
+            </article>
+        </section>
+
+        <h2 class="titulo">Series Favoritas</h2>
+        <section class="cajaPadre">
+     
+            <article class="cajaHija">
+                <img class="imagen" src="./img/1c.jpg" alt="">
+                <h2 class="texto1">The Walking Dead</h2>
+            </article>
+
+            <article class="cajaHija">
+                <img class="imagen" src="./img/2c.jpg" alt="">
+                <h2 class="texto1">The last of us</h2>
+            </article>
+
+            <article class="cajaHija">
+                <img class="imagen" src="./img/3c.jpg" alt="">
+                <h2 class="texto1">American horror stories</h2>
+            </article>
+        </section>
+
+
+    </main>
+
     <footer>
         <nav>
             <ul class="navBar2">
