actualizacion de resultados

--- a/search-results.html
+++ b/search-results.html
@@ -38,6 +38,39 @@
 
     </header>
 
+    <main>
+
+        <h1 class="titulo">Resultados de Busqueda</h1>
+
+        <nav>
+            <ul class="navBusqueda">
+                <li class="itemBusqueda"><a href="#" class="text">Todo</a></li>
+                <li class="itemBusqueda"><a href="#" class="text">Películas</a></li>
+                <li class="itemBusqueda"><a href="#" class="text">Series</a></li>
+            </ul>
+        </nav>
+
+
+        <section class="cajaPadre">
+     
+            <article class="cajaHija">
+                <img class="imagen" src="./img/1a.jpg" alt="">
+                <h2 class="texto1">El legajo del diablo</h2>
+            </article>
+
+            <article class="cajaHija">
+                <img class="imagen" src="./img/2a.jpeg" alt="">
+                <h2 class="texto1">La bruja</h2>
+            </article>
+
+            <article class="cajaHija">
+                <img class="imagen" src="./img/3a.jpeg" alt="">
+                <h2 class="texto1">REC</h2>
+            </article>
+        </section>
+
+    </main>
+
     <footer>
         <nav>
             <ul class="navBar2">
