actualizacion de resultados

--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -6,35 +6,27 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/detallep.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=DM+Serif+Display:ital@1&family=Open+Sans:wght@300;400&family=Phudu&family=Raleway&family=Source+Serif+4:ital,opsz,wght@0,8..60,200;0,8..60,400;0,8..60,500;1,8..60,400&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=DM+Serif+Display:ital@1&family=Montserrat:wght@300&family=Open+Sans:wght@300;400&family=Phudu&family=Raleway&family=Source+Serif+4:ital,opsz,wght@0,8..60,200;0,8..60,400;0,8..60,500;1,8..60,400&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Black+Ops+One&family=DM+Serif+Display:ital@1&family=Montserrat:wght@300&family=Open+Sans:wght@300;400&family=Phudu&family=Raleway&family=Source+Serif+4:ital,opsz,wght@0,8..60,200;0,8..60,400;0,8..60,500;1,8..60,400&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Black+Ops+One&family=DM+Serif+Display:ital@1&family=Montserrat:wght@300&family=Open+Sans:wght@300;400&family=Phudu&family=Raleway&family=Source+Serif+4:ital,opsz,wght@0,8..60,200;0,8..60,400;0,8..60,500;1,8..60,400&family=Urbanist:wght@500&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body class="body">
     <main>
-        <h1>MEGAN</h1>
     <section class="sectionD">
-    <div>
-        
-    </div>
-
-    <div>       
+        <i class="fa-solid fa-star"></i>
+     <div>        
          <img class="imagenPelicula" src="./img/megan-m3gan-streaming-online-15012023.webp" alt="imagenPelicula">
+         <h1>MEGAN</h1>
     </div>
-
-    <h4 class="textos"> Fecha de estreno: 2023 </h4>
-
+<h3>Duración: 1h 42m</h3>
+<h3 class="textos"> 2022 - </h3>
     </section>
-
-</main> 
-
+   
+    </main> 
 
 </body>
 </html>
