--- a/search-results.html
+++ b/search-results.html
@@ -25,14 +25,14 @@
 
         </section>
 
-
+        
         <nav>
             <ul class="navBar">
                 <li class="itemHeader"><a href="#" class="text">Películas más valoradas</a></li>
                 <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
                 <li class="itemHeader"><a href="#" class="text">Series populares</a></li>
                 <li class="itemHeader"><a href="#" class="text">Género de películas y series</a></li>
-                <li class="itemHeader"><a href="#" class="text">Películas y series favoritas</a></li>
+                <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
             </ul>
         </nav>
 
@@ -55,7 +55,7 @@
      
             <article class="cajaHija">
                 <img class="imagen" src="./img/1a.jpg" alt="">
-                <h2 class="texto1">El legajo del diablo</h2>
+                <h2 class="texto1">El legado del diablo</h2>
             </article>
 
             <article class="cajaHija">
