--- a/favorites.html
+++ b/favorites.html
@@ -32,7 +32,7 @@
                 <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
                 <li class="itemHeader"><a href="#" class="text">Series populares</a></li>
                 <li class="itemHeader"><a href="#" class="text">Género de películas y series</a></li>
-                <li class="itemHeader"><a href="#" class="text">Películas y series favoritas</a></li>
+                <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
             </ul>
         </nav>
 
@@ -92,4 +92,4 @@
 
 </body>
 
-</html>
+</html> 
