creando pagina detalle_serie.html

--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -27,26 +27,24 @@
     <section class="sectionD">
 
      <div>        
-         <img class="imagenPelicula" src="./img/megan-m3gan-streaming-online-15012023.webp" alt="imagenPelicula">
+         <img class="imagenPelicula" src="./img/Hill-house-1.jpeg" alt="imagenPelicula">
     </div>
 
-        <h1>MEGAN</h1>
+        <h1>LA MALDICION DE <br>HILL HOUSE</h1>
     <div class="stars">
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-regular fa-star"></i> <h3 class="rating">8.3</h3>
+        <i class="fa-regular fa-star"></i>
+        <i class="fa-regular fa-star"></i> <h3 class="rating">7.5</h3>
     </div>
     
-<h3>Duración: 1h 42m</h3>
-<h3 class="textos"> 2022 - Terror/Suspenso</h3>
+<h3>Duración: 42–71 minutos</h3>
+<h3 class="textos"> 2022 - Horror/Sobrenatural</h3>
     </section>
 
     <section>
-    <p>Gemma, diseñadora de una muñeca de inteligencia <br> artificial extraordinaria, se convierte en la tutora legal <br>
-        de una niña. Abrumada por la responsabilidad, cede <br> su educación y protección a la muñeca, sin saber que <br>las 
-        consecuencias serán terribles.</p>
+    <p>Una familia que se debate entre el pasado y el presente <br> hace frente a los tormentosos recuerdos de su viejo hogar <br> y a los escalofriantes sucesos que allí acontecieron.</p>
 
         <div class="fav">
        <p >Agregar a favoritos</p> 
@@ -54,10 +52,10 @@
        <i class="fa-solid fa-heart-circle-plus"></i> </a>
         </div>
 
-<br><br><br><br><br>
+<h2>CAST:</h2>
    <h3 class="cast">CAST: <br>
-    Amie Donald <br> Allison William 
-    <br> Jenna Davis <br> Violet McGraw </h3>
+    Michiel Huisman <br> Carla Gugino 
+    <br> Henry Thomas</h3>
 
 </section>
 
