--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/detallep.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,6 +22,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Black+Ops+One&family=DM+Serif+Display:ital@1&family=Josefin+Sans:wght@500&family=Jost&family=Montserrat:wght@300&family=Open+Sans:wght@300;400&family=Phudu&family=Raleway&family=Source+Serif+4:ital,opsz,wght@0,8..60,200;0,8..60,400;0,8..60,500;1,8..60,400&family=Urbanist:wght@500&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body class="body">
+
+    
+    <header>
+        <section class="section">
+            <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
+
+            <div class="contenedor-input">
+                <label for="buscador"></label>
+                <input type="text" name="nombre" id="buscador" placeholder="buscar">
+
+            </div>
+
+        </section>
+
+
+        <nav>
+            <ul class="navBar">
+                <li class="itemHeader"><a href="#" class="text">Películas más valoradas</a></li>
+                <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
+                <li class="itemHeader"><a href="#" class="text">Series populares</a></li>
+                <li class="itemHeader"><a href="#" class="text">Género de películas y series</a></li>
+                <li class="itemHeader"><a href="#" class="text">Películas y series favoritas</a></li>
+            </ul>
+        </nav>
+
     <main>
     <section class="sectionD">
 
@@ -56,6 +82,17 @@
 </section>
 
     </main> 
+
+
+    <footer>
+        <nav>
+            <ul class="navBar2">
+                <li>Antonella Axelrad </a></li>
+                <li>Sofia Figueroa</li>
+                <li>Victoria Lynch</li>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 </html>
