--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
 
 
-        <nav>
+        <nav class="nav">
             <ul class="navBar">
                 <li class="itemHeader"><a href="#" class="text">Películas más valoradas</a></li>
                 <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
