--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -54,10 +54,11 @@
        <i class="fa-solid fa-heart-circle-plus"></i> </a>
         </div>
 
-<br><br><br><br><br>
-   <h3 class="cast">CAST: <br>
-    Amie Donald <br> Allison William 
-    <br> Jenna Davis <br> Violet McGraw </h3>
+
+   <div class="contenedor-cast">
+    <h3 class="cast">CAST:
+    Amie Donald  Allison William 
+     Jenna Davis Violet McGraw </h3> </div>
 
 </section>
 
