--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -44,7 +44,7 @@
     </section>
 
     <section>
-    <p>Una familia que se debate entre el pasado y el presente <br> hace frente a los tormentosos recuerdos de su viejo hogar <br> y a los escalofriantes sucesos que allí acontecieron.</p>
+    <p>Una familia que se debate entre el pasado y el presente hace frente a los tormentosos recuerdos de su viejo hogar y a los escalofriantes sucesos que allí acontecieron.</p>
 
         <div class="fav">
        <p >Agregar a favoritos</p> 
@@ -54,8 +54,8 @@
 
 <h2>CAST:</h2>
    <h3 class="cast">CAST: <br>
-    Michiel Huisman <br> Carla Gugino 
-    <br> Henry Thomas</h3>
+    Michiel Huisman  Carla Gugino 
+     Henry Thomas</h3>
 
 </section>
 
