actualizacion del buscador

--- a/search-results.html
+++ b/search-results.html
@@ -16,13 +16,14 @@
     <header>
         <section class="section">
             <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
+            
+            <form action="./search-results.html" method="get"> 
+                <div class="contenedor-input">
+                    <label for="buscador"></label>
+                    <input type="text" name="nombre" id="buscador" placeholder="buscar">
 
-            <div class="contenedor-input">
-                <label for="buscador"></label>
-                <input type="text" name="nombre" id="buscador" placeholder="buscar">
-
-            </div>
-
+                </div>
+            </form>
         </section>
 
         
