--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -44,8 +44,8 @@
                 <li class="itemHeader"><a href="#" class="text">Películas más valoradas</a></li>
                 <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
                 <li class="itemHeader"><a href="#" class="text">Series populares</a></li>
-                <li class="itemHeader"><a href="#" class="text">Género de películas y series</a></li>
-                <li class="itemHeader"><a href="#" class="text">Películas y series favoritas</a></li>
+                <li class="itemHeader"><a href="./genero.html" class="text">Género de películas y series</a></li>
+                <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
             </ul>
         </nav>
 <body class="body-detalle">
