--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -22,7 +22,32 @@
 <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="body-detalle">
+    <header>
+        <section class="section">
+            <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
+            
+            <form action="./search-results.html" method="get"> 
+                <div class="contenedor-input">
+                    <label for="buscador"></label>
+                    <input type="text" name="nombre" id="buscador" placeholder="buscar">
 
+                </div>
+            </form>
+        </section>
+
+
+        <nav class="nav">
+            <ul class="navBar">
+                <li class="itemHeader"><a href="#" class="text">Películas más valoradas</a></li>
+                <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
+                <li class="itemHeader"><a href="#" class="text">Series populares</a></li>
+                <li class="itemHeader"><a href="./genero.html" class="text">Género de películas y series</a></li>
+                <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
+            </ul>
+        </nav>
+
+    </header>
+    
     <main>
     <section class="sectionD">
 
