--- a/index.html
+++ b/index.html
@@ -50,28 +50,32 @@
      
             <article class="cajaHija">
                 <img class="imagen" src="./img/1a.jpg" alt="">
-                <h2 class="texto1">El Legajo del Diablo</h2>
-                <h3 class="infoExtra">2018</h3> <i class="fa-solid fa-star"></i>
+                    <h2 class="texto1">El Legajo del Diablo</h2>
+                    <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/2a.jpeg" alt="">
                 <h2 class="texto1">La Bruja</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/3a.jpeg" alt="">
                 <h2 class="texto1">REC</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/4a.jpeg" alt="">
                 <h2 class="texto1">El Resplandor</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/5a.jpg" alt="">
                 <h2 class="texto1">El Exorcista</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
 
@@ -83,26 +87,31 @@
             <article class="cajaHija">
                 <img class="imagen" src="./img/1b.jpg" alt="">
                 <h2 class="texto1">Evil Dead</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/2b.jpg" alt="">
                 <h2 class="texto1">La noche del demonio 5</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/3b.jpg" alt="">
                 <h2 class="texto1">Megan</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/4b.jpg" alt="">
                 <h2 class="texto1">Jeepers Creepers</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/5b.jpg" alt="">
                 <h2 class="texto1">Sonríe</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
         </section>
@@ -112,26 +121,31 @@
             <article class="cajaHija">
                 <img class="imagen" src="./img/1c.jpg" alt="">
                 <h2 class="texto1">The Walking Dead</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/2c.jpg" alt="">
                 <h2 class="texto1">The last of us</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/3c.jpg" alt="">
                 <h2 class="texto1">American horror stories</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/4c.jpg" alt="">
                 <h2 class="texto1">Chucky</h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
             <article class="cajaHija">
                 <img class="imagen" src="./img/5c.jpg" alt="">
                 <h2 class="texto1">La maldición de Hill House </h2>
+                <div class="infoExtra"><h3 class="t">2018</h3> <i class="fa-solid fa-star"></i> <h3 class="t1">3.5</h3></div>
             </article>
 
 
