--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -26,16 +26,6 @@
     
     <header class="header-pelicula">
         <section class="section">
-<<<<<<< HEAD
-            <img class="logo" src="./img/logo1.png" alt="logo">
-
-            <div class="contenedor-input">
-                <label for="buscador"></label>
-                <input type="text" name="nombre" id="buscador" placeholder="buscar"> <i class="fa-solid fa-magnifying-glass"></i>
-
-            </div>
-
-=======
             <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
             
             <form action="./search-results.html" method="get"> 
@@ -45,15 +35,14 @@
 
                 </div>
             </form>
->>>>>>> 0bee7e8620f92fd345f342b52ec005856b38eb8d
         </section>
 
 
         <nav>
             <ul class="navBar">
-                <li class="itemHeader"><a href="#" class="text">Películas más valoradas</a></li>
-                <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
-                <li class="itemHeader"><a href="#" class="text">Series populares</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Películas más valoradas</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Películas populares</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Series populares</a></li>
                 <li class="itemHeader"><a href="./genero.html" class="text">Género de películas y series</a></li>
                 <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
             </ul>
