--- a/index.html
+++ b/index.html
@@ -20,19 +20,11 @@
     <header>
         <section class="section">
             <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
-<<<<<<< HEAD
-
-            <div class="contenedor-input">
-                <label for="buscador"></label>
-                <input type="text" name="nombre" id="buscador" placeholder="buscar"> <i class="fa-solid fa-magnifying-glass"></i>
-
-=======
             
             <form action="./search-results.html" method="get"> 
                 <div class="contenedor-input">
                     <label for="buscador"></label>
                     <input type="text" name="nombre" id="buscador" placeholder="buscar"> <i class="fa-solid fa-magnifying-glass"></i>
->>>>>>> 0bee7e8620f92fd345f342b52ec005856b38eb8d
             </div>
                 </div>
             </form>
@@ -41,9 +33,9 @@
 
         <nav class="nav">
             <ul class="navBar">
-                <li class="itemHeader"><a href="#" class="text">Películas más valoradas</a></li>
-                <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
-                <li class="itemHeader"><a href="#" class="text">Series populares</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Películas más valoradas</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Películas populares</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Series populares</a></li>
                 <li class="itemHeader"><a href="./genero.html" class="text">Género de películas y series</a></li>
                 <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
                 
