--- a/detalle-genero.html
+++ b/detalle-genero.html
@@ -29,9 +29,9 @@
 
         <nav class="nav">
             <ul class="navBar">
-                <li class="itemHeader"><a href="#" class="text">Películas más valoradas</a></li>
-                <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
-                <li class="itemHeader"><a href="#" class="text">Series populares</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Películas más valoradas</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Películas populares</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Series populares</a></li>
                 <li class="itemHeader"><a href="./genero.html" class="text">Género de películas y series</a></li>
                 <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
             </ul>
