--- a/genero.html
+++ b/genero.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
 <body>
@@ -29,9 +31,9 @@
 
         <nav class="nav">
             <ul class="navBar">
-                <li class="itemHeader"><a href="#" class="text">Películas más valoradas</a></li>
-                <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
-                <li class="itemHeader"><a href="#" class="text">Series populares</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Películas más valoradas</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Películas populares</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Series populares</a></li>
                 <li class="itemHeader"><a href="./genero.html" class="text">Género de películas y series</a></li>
                 <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
             </ul>
@@ -41,35 +43,43 @@
 
     <main>
 
-        <h2>Generos de Peliculas</h2>
+    <h2 class="titulo">Generos de Peliculas</h2>
 
         <nav class="nav">
             <ul class="navGenero">
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Terror Psicologico</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Found Footage</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Sagas</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Satiras</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Suspenso</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Scifi</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Slasher</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Zombies</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Infantiles</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Terror Psicologico</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Found Footage</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Sagas</a></li>
+            </ul>
+            <ul class="navGenero">
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Satiras</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Suspenso</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Scifi</a></li>
+            </ul>
+            <ul class="navGenero">
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Slasher</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Zombies</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Infantiles</a></li>
             </ul>
         </nav>
 
-        <h2>Generos de Series</h2>
+    <h2 class="titulo">Generos de Series</h2>
         
-        <nav class="nav">
+        <nav class="navGen">
             <ul class="navGenero">
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Terror Psicologico</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Found Footage</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Sagas</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Satiras</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Suspenso</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Scifi</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Slasher</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Zombies</a></li>
-                <li class="itemHeader"><a href="./detalle-genero.html" class="text">Infantiles</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Terror Psicologico</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Found Footage</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Sagas</a></li>
+            </ul>
+            <ul class="navGenero">
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Satiras</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Suspenso</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Scifi</a></li>
+            </ul>
+            <ul class="navGenero">
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Slasher</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Zombies</a></li>
+                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Infantiles</a></li>
             </ul>
         </nav>
 
