--- a/detalle-genero.html
+++ b/detalle-genero.html
@@ -15,7 +15,7 @@
 
     <header>
         <section class="section">
-            <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
+            <img class="logo" src="./img/logo1.png" alt="logo">
             
             <form action="./search-results.html" method="get"> 
                 <div class="contenedor-input">
