responsive paginas detalles

--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,9 +30,6 @@
 
             <img class="logo" src="./img/logo1.png" alt="logo">
 
-
-            <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
-            
             <form action="./search-results.html" method="get"> 
                 <div class="contenedor-input">
                     <label for="buscador"></label>
@@ -52,6 +50,7 @@
                 <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
             </ul>
         </nav>
+        </header>
 
     <main>
     <section class="sectionD">
