--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -46,24 +46,16 @@
         </section>
 
 
-        <nav class="nav">
+        <nav>
             <ul class="navBar">
-                <li class="itemHeader"><a href="#" class="text">Películas más valoradas</a></li>
-                <li class="itemHeader"><a href="#" class="text">Películas populares</a></li>
-                <li class="itemHeader"><a href="#" class="text">Series populares</a></li>
-                <li class="itemHeader"><a href="#" class="text">Género de películas y series</a></li>
-                <li class="itemHeader"><a href="#" class="text">Películas y series favoritas</a></li>
-            </ul>
-        </nav>
-
-                <li class="itemHeader"><a href="./genero.html" class="text">Género de películas y series</a></li>
-                <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Inicio</a></li>
+                <li class="itemHeader"><a href="./genero.html" class="text">Géneros</a></li>
+                <li class="itemHeader"><a href="./favorites.html" class="text">Favoritas</a></li>
             </ul>
         </nav>
 
     </header>
     
->>>>>>> 8af922734786d7e76e7468e09a6b6d924e62ae2f
     <main>
     <section class="sectionD">
 
