--- a/favorites.html
+++ b/favorites.html
@@ -31,11 +31,9 @@
 
         <nav>
             <ul class="navBar">
-                <li class="itemHeader"><a href="./index.html" class="text">Películas más valoradas</a></li>
-                <li class="itemHeader"><a href="./index.html" class="text">Películas populares</a></li>
-                <li class="itemHeader"><a href="./index.html" class="text">Series populares</a></li>
-                <li class="itemHeader"><a href="./genero.html" class="text">Género de películas y series</a></li>
-                <li class="itemHeader"><a href="./favorites.html" class="text">Películas y series favoritas</a></li>
+                <li class="itemHeader"><a href="./index.html" class="text">Inicio</a></li>
+                <li class="itemHeader"><a href="./genero.html" class="text">Géneros</a></li>
+                <li class="itemHeader"><a href="./favorites.html" class="text">Favoritas</a></li>
             </ul>
         </nav>
 
