--- a/genero.html
+++ b/genero.html
@@ -20,9 +20,9 @@
             <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
             <nav>
                 <ul class="navBar">
-                    <li class="itemHeader"><a href="./index.html" class="text">Home </a></li>
-                    <li class="itemHeader"><a href="./genero.html" class="text">Género </a></li>
-                    <li class="itemHeader"><a href="./favorites.html" class="text">Favoritos</a></li>
+                    <li class="itemHeader"><a href="./index.html" class="text">Inicio</a></li>
+                    <li class="itemHeader"><a href="./genero.html" class="text">Géneros</a></li>
+                    <li class="itemHeader"><a href="./favorites.html" class="text">Favoritas</a></li>
                 </ul>
             </nav>
             <form action="./search-results.html" method="get"> 
