--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -24,7 +24,7 @@
 </head>
  
  
-<body class="body-detalle">
+<body id="body-detallep">
     <header class="header-pelicula">
         <section class="section">
 
