Arreglos de pagina genero

--- a/genero.html
+++ b/genero.html
@@ -42,27 +42,18 @@
 
     </header>
 
-        
-        
-
-    </header>
-
     <main>
 
     <h2 class="titulo">Generos de Peliculas</h2>
 
-        <nav class="navGen">
+        <nav>
             <ul class="navGenero">
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Terror Psicologico</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Found Footage</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Sagas</a></li>
-            </ul>
-            <ul class="navGenero">
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Satiras</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Suspenso</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Scifi</a></li>
-            </ul>
-            <ul class="navGenero">
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Slasher</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Zombies</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Infantiles</a></li>
@@ -76,13 +67,9 @@
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Terror Psicologico</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Found Footage</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Sagas</a></li>
-            </ul>
-            <ul class="navGenero">
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Satiras</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Suspenso</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Scifi</a></li>
-            </ul>
-            <ul class="navGenero">
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Slasher</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Zombies</a></li>
                 <li class="itemGenero"><a href="./detalle-genero.html" class="text">Infantiles</a></li>
