--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -96,9 +96,9 @@
     <footer class="footer-detalle">
         <nav>
             <ul class="navBar2">
-                <li>Antonella Axelrad </a></li>
-                <li>Sofia Figueroa</li>
-                <li>Victoria Lynch</li>
+                <li class="footerNames">Antonella Axelrad </a></li>
+                <li class="footerNames">Sofia Figueroa</li>
+                <li class="footerNames">Victoria Lynch</li>
             </ul>
         </nav>
     </footer>
