--- a/genero.html
+++ b/genero.html
@@ -85,9 +85,9 @@
     <footer>
         <nav>
             <ul class="navBar2">
-                <li>Antonella Axelrad </a></li>
-                <li>Sofia Figueroa</li>
-                <li>Victoria Lynch</li>
+                <li class="footerNames">Antonella Axelrad </a></li>
+                <li class="footerNames">Sofia Figueroa</li>
+                <li class="footerNames">Victoria Lynch</li>
             </ul>
         </nav>
     </footer>
