responsive detalle pelicula y genero

--- a/detalle-genero.html
+++ b/detalle-genero.html
@@ -23,7 +23,7 @@
 
     <header class="header-pelicula">
         <section class="section">
-            <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
+            <img class="logo" src="./img/logo1.png" alt="logo">
 
             
         <nav class="nav">
