--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -27,7 +27,7 @@
 <body id="body-detallep">
     <header class="header-pelicula">
         <section class="section">
-            <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
+            <img class="logo" src="./img/logo1.png" alt="logo">
 
             
         <nav class="nav">
@@ -57,7 +57,7 @@
          <img class="imagenPelicula" src="./img/megan-m3gan-streaming-online-15012023.webp" alt="imagenPelicula">
     </div>
 
-        <h1>MEGAN</h1>
+        <h1 class="tituloserie-peli">MEGAN</h1>
     <div class="detalle-estrellas">
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-star"></i>
@@ -72,7 +72,7 @@
     </section>
 
     <section>
-    <p class="p-pelicula">Gemma, diseñadora de una muñeca de inteligencia artificial extraordinaria, se convierte en la tutora legal
+    <p class="p-serie-pelicula">Gemma, diseñadora de una muñeca de inteligencia artificial extraordinaria, se convierte en la tutora legal
         de una niña. Abrumada por la responsabilidad, cede su educación y protección a la muñeca, sin saber que las 
         consecuencias serán terribles.</p>                                                                                                                                                       <br>
 
