--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -23,11 +23,11 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./favorites.html">
 </head>
-<body class="body-detalle">
+<body class="body-detalleS">
   
     <header class="header-pelicula">
         <section class="section">
-            <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
+            <img class="logo" src="./img/logo1.png" alt="logo">
 
             
         <nav class="nav">
@@ -57,7 +57,7 @@
          <img class="imagenSerie" src="./img/Hill-house-1.jpeg" alt="imagenPelicula">
     </div>
 
-        <h1>LA MALDICION DE <br>HILL HOUSE</h1>
+        <h1 class="tituloserie-peli">LA MALDICION DE <br>HILL HOUSE</h1>
         <div class="detalle-estrellas">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -70,7 +70,7 @@
     </section>
 
     <section>
-        <p class="p-serie">Una familia que se debate entre el pasado y el presente hace frente a los tormentosos recuerdos de su viejo hogar y a los escalofriantes sucesos que allí acontecieron.</p>                                                                      <br>
+        <p class="p-serie-pelicula">Una familia que se debate entre el pasado y el presente hace frente a los tormentosos recuerdos de su viejo hogar y a los escalofriantes sucesos que allí acontecieron.</p>                                                                      <br>
     
             <article>
                 <a class="agregar-favoritos" href="/favorites.html">Agregar a favoritos</a>
