--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -24,8 +24,8 @@
 </head>
  
  
-<body id="body-detallep">
-    <header class="header-pelicula">
+<body>
+    <header>
         <section class="section">
             <img class="logo" src="./img/logo1.png" alt="logo">
 
@@ -50,14 +50,12 @@
         </section>
         </header>
 
-    <main>
+    <main class="divImage">
+
     <section class="sectionD">
 
-     <div>        
-         <img class="imagenPelicula" src="./img/megan-m3gan-streaming-online-15012023.webp" alt="imagenPelicula">
-    </div>
+    <h1 class="tituloserie-peli">MEGAN</h1>
 
-        <h1 class="tituloserie-peli">MEGAN</h1>
     <div class="detalle-estrellas">
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-star"></i>
@@ -67,33 +65,29 @@
     </div>
     
     
-<h3 class="duracion">Duración: 1h 42m</h3>
-<h3 class="datos"> 2022 - Terror/Suspenso</h3>
+    <h3 class="duracion">Duración: 1h 42m</h3>
+    <h3 class="datos"> 2022 - Terror/Suspenso</h3>
     </section>
 
     <section>
-    <p class="p-serie-pelicula">Gemma, diseñadora de una muñeca de inteligencia artificial extraordinaria, se convierte en la tutora legal
+    <p class="p-pelicula">Gemma, diseñadora de una muñeca de inteligencia artificial extraordinaria, se convierte en la tutora legal
         de una niña. Abrumada por la responsabilidad, cede su educación y protección a la muñeca, sin saber que las 
-        consecuencias serán terribles.</p>                                                                                                                                                       <br>
-
+        consecuencias serán terribles.</p>                                                                                                                                                       
         <article>
             <a class="agregar-favoritos" href="/favorites.html">Agregar a favoritos</a>
         </article>
 
-   <div>
+    <div>
     <h3 class="cast">CAST:
     Amie Donald - Allison William -
-     Jenna Davis - Violet McGraw </h3> </div>
+     Jenna Davis - Violet McGraw </h3>
+    </div>
 
-</section>
+    </section>
 
-
-
-    </main> 
-
+</main> 
 
     <footer>
-    <footer class="footer-detalle">
         <nav>
             <ul class="navBar2">
                 <li class="footerNames">Antonella Axelrad </a></li>
