--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -65,7 +65,7 @@
             <i class="fa-regular fa-star"></i>
             <i class="fa-regular fa-star"></i> <h3 class="rating">7.5</h3>
         </div>
-<h3 class="duracion">Duración: 42–71 minutos</h3>
+<h3 class="duracion">Duración: 42 – 71 minutos</h3>
 <h3 class="datos"> 2017 - Horror/Sobrenatural</h3>
     </section>
 
@@ -73,7 +73,7 @@
         <p class="p-serie-pelicula">Una familia que se debate entre el pasado y el presente hace frente a los tormentosos recuerdos de su viejo hogar y a los escalofriantes sucesos que allí acontecieron.</p>                                                                      <br>
     
             <article>
-                <a class="agregar-favoritos" href="/favorites.html">Agregar a favoritos</a>
+                <a class="agregar-favoritos" href="favorites.html">Agregar a favoritos</a>
             </article>
     
        <div>
