--- a/search-results.html
+++ b/search-results.html
@@ -46,6 +46,7 @@
     <main>
 
         <h1 class="titulo">Resultados de Busqueda</h1>
+        <p class="oculto">No se encontraron resultados de busqueda</p>
 
         <nav>
             <ul class="navBusqueda">
