--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./favorites.html">
 </head>
-<body class="body-detalleS">
+<body>
   
-    <header class="header-pelicula">
+    <header>
         <section class="section">
             <img class="logo" src="./img/logo1.png" alt="logo">
 
@@ -50,14 +50,12 @@
         </section>
     </header>
 
-    <main class="divImage">
+    <main class="divImage1">
     <section class="sectionD">
 
-     <div>        
-         <img class="imagenSerie" src="./img/Hill-house-1.jpeg" alt="imagenPelicula">
-    </div>
 
         <h1 class="tituloserie-peli">LA MALDICION DE <br>HILL HOUSE</h1>
+        <img class="imgSerie" src="../proyecto-grupo/img/Hill-house-1.jpeg" alt="">
         <div class="detalle-estrellas">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -89,9 +87,9 @@
     <footer>
         <nav>
             <ul class="navBar2">
-                <li>Antonella Axelrad </a></li>
-                <li>Sofia Figueroa</li>
-                <li>Victoria Lynch</li>
+                <li class="footerNames">Antonella Axelrad </a></li>
+                <li class="footerNames">Sofia Figueroa</li>
+                <li class="footerNames">Victoria Lynch</li>
             </ul>
         </nav>
     </footer>
