--- a/detalle-genero.html
+++ b/detalle-genero.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>Detalle genero</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,6 @@
                 <div class="contenedor-input">
                     <label for="buscador"></label>
                     <input type="text" name="nombre" id="buscador" placeholder="buscar"> <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
                 </div>
             </form>
         </section>
