--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -44,7 +44,6 @@
                 <div class="contenedor-input">
                     <label for="buscador"></label>
                     <input type="text" name="nombre" id="buscador" placeholder="buscar"> <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
                 </div>
             </form>
         </section>
@@ -61,11 +60,12 @@
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-star"></i>
-        <i class="fa-regular fa-star detalle-s"></i> <h3 class="rating">8.3</h3>
+        <i class="fa-regular fa-star detalle-s"></i> <h3 class="rating">4.0</h3>
     </div>
     
     
     <h3 class="duracion">Duración: 1h 42m</h3>
+    <img class="imgSerie" src="../proyecto-grupo/img/megan-fondo.png" alt="">
     <h3 class="datos"> 2022 - Terror/Suspenso</h3>
     </section>
 
@@ -74,7 +74,7 @@
         de una niña. Abrumada por la responsabilidad, cede su educación y protección a la muñeca, sin saber que las 
         consecuencias serán terribles.</p>                                                                                                                                                       
         <article>
-            <a class="agregar-favoritos" href="/favorites.html">Agregar a favoritos</a>
+            <a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>
         </article>
 
     <div>
