--- a/favorites.html
+++ b/favorites.html
@@ -93,6 +93,7 @@
     <footer>
         <nav>
             <ul class="navBar2">
+                <img class="tmdb-logo" src="./img/tmdb-logo.png" alt="logo">
                 <li class="footerNames">Antonella Axelrad </a></li>
                 <li class="footerNames">Sofia Figueroa</li>
                 <li class="footerNames">Victoria Lynch</li>
