--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -65,7 +65,7 @@
     
     
     <h3 class="duracion">Duración: 1h 42m</h3>
-    <img class="imgSerie" src="../proyecto-grupo/img/megan-fondo.png" alt="">
+    <img class="imgSerie" src="./img/megan-fondo.png" alt="">
     <h3 class="datos"> 2022 - Terror/Suspenso</h3>
     </section>
 
