--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
         <section class="section">
-            <img class="logo" src="../proyecto-grupo/img/logo1.png" alt="logo">
+            <img class="logo" src="./img/logo1.png" alt="logo">
 
             
         <nav class="nav">
@@ -162,7 +162,7 @@
             </ul>
         </nav>
     </footer>
-
+<script src="./js/index.js"></script>
 </body>
 
 </html>
