--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             <form action="./search-results.html" method="get"> 
                 <div class="contenedor-input">
                     <label for="buscador"></label>
-                    <input type="text" name="nombre" id="buscador" placeholder="buscar"> <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" name="nombre" id="buscador" placeholder="buscar" > 
+                    
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                
                 </div>
             </form>
         </section>
