Creacion genero y detalle-genero

--- a/genero.html
+++ b/genero.html
@@ -47,31 +47,15 @@
 
         <nav>
             <ul class="navGenero">
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Terror Psicologico</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Found Footage</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Sagas</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Satiras</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Suspenso</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Scifi</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Slasher</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Zombies</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Infantiles</a></li>
+
             </ul>
         </nav>
 
     <h2 class="titulo">Generos de Series</h2>
         
         <nav class="navGen">
-            <ul class="navGenero">
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Terror Psicologico</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Found Footage</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Sagas</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Satiras</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Suspenso</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Scifi</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Slasher</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Zombies</a></li>
-                <li class="itemGenero"><a href="./detalle-genero.html" class="text">Infantiles</a></li>
+            <ul id = "nav" class="navGenero">
+
             </ul>
         </nav>
 
@@ -92,6 +76,7 @@
         </nav>
     </footer>
 
+<script src="./js/genero.js"></script>
 </body>
 
 </html>
