detalle js serie

--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -63,8 +63,9 @@
             <i class="fa-regular fa-star"></i> <h3 class="rating">3.0</h3>
         </div>
 <h3 class="duracion">Duración: 42 – 71 minutos</h3>
-<img class="imgSerie" src="../proyecto-grupo/img/Hill-house-1.jpeg" alt="">
-<h3 class="datos"> 2017 - Horror/Sobrenatural</h3>
+<img id="imgSerie" src="../proyecto-grupo/img/Hill-house-1.jpeg" alt="">
+<h3 class="datos">   Horror/Sobrenatural</h3>\
+<h3 class="anio"> 2017</h3>
     </section>
 
     <section>
@@ -96,6 +97,6 @@
     </footer>
 
 
-
+<script src="./js/detalleSerie.js"></script>
 </body>
 </html>
