arreglando errores js detalle serie

--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -101,6 +101,6 @@
     </footer>
     
 
-<script src="./js/detallePeli.js"></script>
+<script src="./js/detalleSerie.js"></script>
 </body>
 </html>
