--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -66,6 +66,7 @@
 <img id="imgSerie" src="../proyecto-grupo/img/Hill-house-1.jpeg" alt="">
 <h3 class="datos">   Horror/Sobrenatural</h3>\
 <h3 class="anio"> 2017</h3>
+<h3 class="temporadas>temporadas</h3>
     </section>
 
     <section>
@@ -97,6 +98,6 @@
     </footer>
 
 
-<script src="./js/detalleSerie.js"></script>
+<script src="./js/"></script>
 </body>
 </html>
