iniciando ver recomendaciones de detalles js

--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -76,14 +76,8 @@
         de una niña. Abrumada por la responsabilidad, cede su educación y protección a la muñeca, sin saber que las 
         consecuencias serán terribles.</p>                                                                                                                                                       
         <article>
-            <a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>
+            <a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>                                                                                                                                                                   <br><br>
         </article>
-
-    <div>
-    <h3 class="cast">CAST:
-    Amie Donald - Allison William -
-     Jenna Davis - Violet McGraw </h3>
-    </div>
 
     </section>
 
@@ -101,11 +95,6 @@
     </footer>
     
 
-<<<<<<< HEAD
-<script src="./js/detalleSerie.js"></script>
-=======
 <script src="./js/detallePeli.js"></script>
-
->>>>>>> ecb0b5709932de9c5d3030bb494b55c50e89fd75
 </body>
 </html>
