--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Detalle serie</title>
-    <link rel="stylesheet" href="./css/detallep.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,11 +62,9 @@
             <i class="fa-regular fa-star"></i>
             <i class="fa-regular fa-star"></i> <h3 class="rating">3.0</h3>
         </div>
-<h3 class="duracion">Duración: 42 – 71 minutos</h3>
-<img id="imgSerie" src="../proyecto-grupo/img/Hill-house-1.jpeg" alt="">
+<img id="imgSerie" src="" alt="">
 <h3 class="datos">   Horror/Sobrenatural</h3>\
 <h3 class="anio"> 2017</h3>
-<h3 class="temporadas>temporadas</h3>
     </section>
 
     <section>
@@ -75,11 +73,6 @@
             <article>
                 <a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>
             </article>
-    
-       <div>
-        <h3 class="cast">CAST:
-        Michiel Huisman  Carla Gugino 
-        Henry Thomas</h3> </div>
     
     </section>
   
@@ -98,6 +91,6 @@
     </footer>
 
 
-<script src="./js/"></script>
+<script src="./js/detalleSerie.js"></script>
 </body>
 </html>
