--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -76,8 +76,14 @@
         de una niña. Abrumada por la responsabilidad, cede su educación y protección a la muñeca, sin saber que las 
         consecuencias serán terribles.</p>                                                                                                                                                       
         <article>
-            <a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>                                                                                                                                                                   <br><br>
+            <a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>
         </article>
+
+    <div>
+    <h3 class="cast">CAST:
+    Amie Donald - Allison William -
+     Jenna Davis - Violet McGraw </h3>
+    </div>
 
     </section>
 
@@ -96,5 +102,6 @@
     
 
 <script src="./js/detallePeli.js"></script>
+
 </body>
 </html>
