boton de busqueda

--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -43,7 +43,7 @@
             <form action="./search-results.html" method="get"> 
                 <div class="contenedor-input">
                     <label for="buscador"></label>
-                    <input type="text" name="nombre" id="buscador" placeholder="buscar"> <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" name="nombre" id="buscador" placeholder="buscar"><button onclick="redirigirConDato()"><i class="fa-solid fa-magnifying-glass"></i></button> 
                 </div>
             </form>
         </section>
@@ -76,7 +76,7 @@
         de una niña. Abrumada por la responsabilidad, cede su educación y protección a la muñeca, sin saber que las 
         consecuencias serán terribles.</p>                                                                                                                                                       
         <article>
-            <a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>
+            <button onclick="toggleObjeto()">Agregara favoritos</button><a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>
         </article>
 
     <div>
