--- a/detalle-genero.html
+++ b/detalle-genero.html
@@ -39,7 +39,7 @@
             <form action="./search-results.html" method="get"> 
                 <div class="contenedor-input">
                     <label for="buscador"></label>
-                    <input type="text" name="nombre" id="buscador" placeholder="buscar"> <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" name="nombre" id="buscador" placeholder="buscar"><button onclick="redirigirConDato()"><i class="fa-solid fa-magnifying-glass"></i></button> 
                 </div>
             </form>
         </section>
