--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -76,7 +76,7 @@
         de una niña. Abrumada por la responsabilidad, cede su educación y protección a la muñeca, sin saber que las 
         consecuencias serán terribles.</p>                                                                                                                                                       
         <article>
-            <button onclick="toggleObjeto()">Agregara favoritos</button><a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>
+            <a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>
         </article>
 
     <div>
