--- a/detalle_serie.html
+++ b/detalle_serie.html
@@ -43,7 +43,7 @@
             <form action="./search-results.html" method="get"> 
                 <div class="contenedor-input">
                     <label for="buscador"></label>
-                    <input type="text" name="nombre" id="buscador" placeholder="buscar"><button onclick="redirigirConDato()"><i class="fa-solid fa-magnifying-glass"></i></button> 
+                    <input type="text" name="nombre" id="buscador" placeholder="buscar"> <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
     
             </form>
@@ -63,7 +63,7 @@
             <i class="fa-regular fa-star"></i> <h3 class="rating">3.0</h3>
         </div>
 <img id="imgSerie" src="" alt="">
-<h3 class="datos">   Horror/Sobrenatural</h3>\
+<h3 class="datos">  Genero: Drama </h3>
 <h3 class="anio"> 2017</h3>
     </section>
 
