--- a/detalle_pelicula.html
+++ b/detalle_pelicula.html
@@ -62,7 +62,7 @@
         <i class="fa-solid fa-star"></i>
         <i class="fa-regular fa-star detalle-s"></i> <h3 class="rating">4.0</h3>
     </div>
-    
+    <img id="imgSerie" src="" alt="">
 
     <h3 class="duracion">Duración: 1h 42m</h3>
     <h3 class="datos"> Terror/Suspenso</h3>
@@ -74,23 +74,10 @@
     <p class="p-pelicula">Gemma, diseñadora de una muñeca de inteligencia artificial extraordinaria, se convierte en la tutora legal
         de una niña. Abrumada por \\la responsabilidad, cede su educación y protección a la muñeca, sin saber que las 
         consecuencias serán terribles.</p>                                                                                                                                                       
-<<<<<<< HEAD
         <div class="conteiner">
             <a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>
         </div>
        
-=======
-        <article>
-            <a class="agregar-favoritos" href="./favorites.html">Agregar a favoritos</a>
-        </article>
-
-    <div>
-    <h3 class="cast">CAST:
-    Amie Donald - Allison William -
-     Jenna Davis - Violet McGraw </h3>
-    </div>
-
->>>>>>> 4d6b6466b50271e53cc87dee3c44920a12acf643
     </section>
 
     <div id="contenedor-recomendaciones">
